# financial-agents

./: .env.example  README.md  langgraph.json  main.py  pyproject.toml  test.py
src/agents/: agent.py
src/agents/aswath_damodaran/: agent.py  growth_analysis.py  intrinsic_value_analysis.py  relative_valuation_analysis.py  risk_analysis.py  story_narrative_analysis.py
src/agents/ben_graham/: agent.py  earnings_stability_analysis.py  financial_strength_analysis.py  valuation_analysis.py
src/agents/bill_ackman/: activism_potential_analysis.py  agent.py  balance_sheet_analysis.py  business_quality_analysis.py  valuation_analysis.py
src/agents/cathie_wood/: agent.py  disruptive_potential_analysis.py  innovation_growth_analysis.py  valuation_analysis.py
src/agents/charlie_munger/: agent.py  management_quality_analysis.py  moat_strength_analysis.py  predictability_analysis.py  valuation_analysis.py
src/agents/fundamentals/: agent.py  consistency_analysis.py  fundamental_analysis.py  growth_analysis.py  quality_analysis.py  valuation_analysis.py
src/agents/information_query/: agent.py
src/agents/michael_burry/: agent.py  contrarian_analysis.py  deep_value_analysis.py  financial_statement_analysis.py  market_inefficiency_analysis.py  risk_assessment.py
src/agents/peter_lynch/: agent.py  business_understanding_analysis.py  earnings_quality_analysis.py  growth_analysis.py  (+4 more)
src/common/: agent_configuration.py  agent_state.py  dataset.py  markdown.py  settings.py  util.py
src/llm/: llm_model.py
src/nodes/: llm_node.py  next_step_suggestions.py  ticker_search.py
(+56 files in other folders)
